--- a/resources/js/layouts/base.css
+++ b/resources/js/layouts/base.css
@@ -129,6 +129,9 @@ header {
   align-items: center;
   justify-content: flex-start;
   display: flex;
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .header_search {
@@ -221,9 +224,14 @@ header {
 .header_profile-name--nav--link {
 font-size: 15px;
 font-weight: 500;
-color: #212b36;
+color: #fff;
 display: block;
 padding: 0.5rem;
+}
+.header_profile-name--nav--link:hover,
+.header_profile-name--nav--link:active
+ {
+  color: rgb(196, 181, 181);
 }
 
 
@@ -731,6 +739,12 @@ ul {
   height: 200px;
   border: 50%;
 }
+.truncate-desc {
+  width: 100%;
+  height: 50px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
 /*==================== SERVICES ====================*/
 .services_container {
@@ -893,7 +907,7 @@ ul {
   padding: 0 20px;
   gap: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 100px;
   color: #808891;
   font-size: 14px;
   font-weight: 500;
@@ -906,7 +920,7 @@ ul {
   padding: 5px 20px !important;
   gap: 10px;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 100px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 100px;
   align-items: center;
   border-bottom: 1px solid #e0e0e0;
   padding: 0.6rem 0;
