--- a/resources/js/layouts/base.css
+++ b/resources/js/layouts/base.css
@@ -894,7 +894,8 @@ ul {
 
 .table_skills-percentage {
   display: block;
-  background-color: #43467f;
+  background-color: #ff00d4!important;
+  padding: 0!important;
 }
 
 /*==================== EDUCATION ====================*/
