--- a/resources/js/assets/css/base.css
+++ b/resources/js/assets/css/base.css
@@ -72,8 +72,8 @@ font-weight: var(--font-medium);
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
- Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+ Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
   font-size: 14px;
 }
 
@@ -88,9 +88,9 @@ html {
   box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6,p,a {
+/* h1, h2, h3, h4, h5, h6,p,a {
   color: #454f5b;
-}
+} */
 
 body {
   height: calc(100vh - 100px);
@@ -1288,3 +1288,7 @@ ul {
 
 
 /* For large devices */
+.dz-success-mark,
+.dz-error-mark {
+    display: none;
+}
