started fill template with content

--- a/resources/js/assets/css/main/_home.scss
+++ b/resources/js/assets/css/main/_home.scss
@@ -15,7 +15,7 @@
     width: 200px;
     height: 200px;
     border-radius: 50%;
-    padding-left: 40px;
+    /* padding-left: 40px; */
     overflow: hidden;
     margin-bottom: $mb-1;
   }
