--- a/resources/js/assets/css/main/_testimonial.scss
+++ b/resources/js/assets/css/main/_testimonial.scss
@@ -36,3 +36,51 @@
 .swiper-container .swiper-pagination-testimonial{
   bottom: 0;
 }
+.rating {
+  display: flex;
+ /*  align-items: flex-end; */
+  font-size: 30px;
+  line-height: 0.75;
+
+  .rating_body {
+    position: relative;
+    &::before {
+      content: '★★★★★';
+      display: block;
+      opacity: 50%;
+    }
+  }
+
+  .rating_items {
+    display: flex;
+    position: absolute;
+  }
+  .rating_item {
+    flex: 0 0 20%;
+    height: 100%;
+    opacity: 0;
+  }
+  .rating_active {
+    position: absolute;
+    width: 0%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+
+    &::before {
+      content: '★★★★★';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      color: hsl(250deg, 69%, 61%);
+    }
+  }
+  .rating_value {
+    font-size: 50%;
+    line-height: 1;
+    padding-left: 10px;
+  }
+}
