made refactoring the client part of the website

--- a/resources/js/assets/css/main/_home.scss
+++ b/resources/js/assets/css/main/_home.scss
@@ -107,3 +107,7 @@
   .home_social-icon:hover{
     color: $first-color;
   }
+  .buttons-about {
+    display: flex;
+    justify-content: space-evenly;
+  }
