Divided client part of the website into separate components, created UI library

--- a/resources/js/assets/css/main/_media.scss
+++ b/resources/js/assets/css/main/_media.scss
@@ -417,13 +417,13 @@
         font-size: 3.5rem;
       }
   
-      .swiper-button-prev{
+      /* .swiper-button-prev{
         left: -3.5rem;
-      }
+      } */
   
-      .swiper-button-next{
+      /* .swiper-button-next{
         right: -3.5rem;
-      }
+      } */
   
       .swiper-container-horizontal > .swiper-pagination-bullets{
         bottom: -4.5rem;
