--- a/resources/js/assets/css/main/_portfolio.scss
+++ b/resources/js/assets/css/main/_portfolio.scss
@@ -1,9 +1,15 @@
 .portfolio_container{
     overflow: initial;
   }
+  .swiper {
+    padding: 0 30px 30px 30px;
+  }
   
   .portfolio_content{
     padding: 0 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: flex-center;
   }
   
   .portfolio_img{
@@ -20,8 +26,15 @@
   .portfolio_description{
     margin-bottom: $mb-0-75;
   }
+  .swiper-pagination-bullet-active{
+    background-color: $first-color;
+  }
+  .swiper-pagination-bullets, .swiper-pagination-bullets.swiper-pagination-horizontal {
+    bottom: -5px;
+  }
+ 
   
-  .portfolio_button{
+  /* .portfolio_button{
     transform: translateX(.25rem)
   }
   
@@ -47,12 +60,19 @@
     bottom: -2.5rem;
   }
   
-  .swiper-pagination-bullet-active{
-    background-color: $first-color;
-  }
   
-  .swiper-button-prev,
+  
+   */
+   .swiper-button-prev,
   .swiper-button-next,
   .swiper-pagination-bullet{
     outline: none;
+  }
+  .data-slider {
+    max-width: 968px;
+  }
+  .swiper-button-next,
+  .swiper-button-prev {
+    color: $first-color;
+    cursor: pointer;
   }
