--- a/resources/js/assets/css/main/_contact.scss
+++ b/resources/js/assets/css/main/_contact.scss
@@ -44,3 +44,7 @@
     outline: none;
     padding: .25rem .5rem .5rem 0;
   }
+  .form-message_send {
+    font-size: $normal-font-size;
+    color:  $first-color;
+  }
