--- a/resources/js/assets/css/main/_portfolio.scss
+++ b/resources/js/assets/css/main/_portfolio.scss
@@ -10,6 +10,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-center;
+    flex-direction: column;
+    justify-content: center;
   }
   
   .portfolio_img{
