--- a/resources/js/assets/css/main/_skills.scss
+++ b/resources/js/assets/css/main/_skills.scss
@@ -5,27 +5,27 @@
   .skills_header{
     display: flex;
     align-items: center;
-    margin-bottom: $mb-2-5;
+    margin-bottom: var(--mb-2-5);
     cursor: pointer;
   }
   
   .skills_icon,
   .skills_arrow{
     font-size: 2rem;
-    color: $first-color;
+    color: var(--first-color);
   }
   
   .skills_icon{
-    margin-right: $mb-0-75;
+    margin-right: var(--mb-0-75);
   }
   
   .skills_title{
-    font-size: $h3-font-size;
+    font-size: var(--h3-font-size);
   }
   
   .skills_subtitle{
-    font-size: $small-font-size;
-    color: $text-color-light;
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
   }
   
   .skills_list{
@@ -41,12 +41,12 @@
   .skills_titles{
     display: flex;
     justify-content: space-between;
-    margin-bottom: $mb-0-5;
+    margin-bottom: var(--mb-0-5);
   }
   
   .skills_name{
-    font-size: $normal-font-size;
-    font-weight: $font-medium;
+    font-size: var(--normal-font-size);
+    font-weight: var(--font-medium);
   }
   
   .skills_bar,
@@ -56,12 +56,12 @@
   }
   
   .skills_bar{
-    background-color: $first-color-lighter;
+    background-color: var(--first-color-lighter);
   }
   
   .skills_percentage{
     display: block;
-    background-color: $first-color;
+    background-color: var(--first-color);
   }
   
   .skills_html{
@@ -113,7 +113,7 @@
   
   .skills_open .skills_list{
     height: max-content;
-    margin-bottom: $mb-2-5;
+    margin-bottom: var(--mb-2-5);
   }
   
   .skills_open .skills_arrow {
