--- a/resources/js/assets/css/main/_contact.scss
+++ b/resources/js/assets/css/main/_contact.scss
@@ -4,47 +4,47 @@
   
   .contact_information{
     display: flex;
-    margin-bottom: $mb-2;
+  margin-bottom: var(--mb-2);
   }
   
   .contact_icon{
     font-size: 2rem;
-    color: $first-color;
-    margin-right: $mb-0-75;
+    color: var(--first-color);
+    margin-right: var(--mb-0-75);
   }
   
   .contact_title{
-    font-size: $h3-font-size;
-    font-weight: $font-medium;
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
   }
   
   .contact_subtitle{
-    font-size: $small-font-size;
-    color: $text-color-light;
+    font-size: var(--small-font-size);
+    color: var(--text-color-light);
   }
   
   .contact_content{
-    background-color: $input-color;
+    background-color: var(--input-color);
     border-radius: .5rem;
     padding: .75rem 1rem .25rem;
   }
   
   .contact_label{
-    font-size: $small-font-size;
-    color: $title-color;
+    font-size: var(--small-font-size);
+    color: var(--title-color);
   }
   
   .contact_input{
     width: 100%;
-    background-color: $input-color;
-    color: $text-color;
-    font-family: $body-color;
-    font-size: $normal-font-size;
+    background-color: var(--input-color);
+    color: var(--text-color);
+    font-family: var(--body-color);
+    font-size: var(--normal-font-size);
     border: none;
     outline: none;
     padding: .25rem .5rem .5rem 0;
   }
   .form-message_send {
-    font-size: $normal-font-size;
-    color:  $first-color;
+    font-size: var(normal-font-size);
+    color:  var(first-color);
   }
