--- a/resources/js/assets/css/main/_footer.scss
+++ b/resources/js/assets/css/main/_footer.scss
@@ -12,17 +12,17 @@
   }
   
   .footer_bg{
-    background-color: $first-color-second;
+    background-color: var(--first-color-second);
     padding: 2rem 0 3rem;
   }
   
   .footer_title{
-    font-size: $h1-font-size;
-    margin-bottom: $mb-0-25;
+    font-size: var(--h1-font-size);
+    margin-bottom: var(--mb-0-25);
   }
   
   .footer_subtitle{
-    font-size: $small-font-size;
+    font-size: var(--small-font-size);
   }
   
   .footer_links{
@@ -32,23 +32,23 @@
   }
   
   .footer_link a:hover{
-    color: $first-color-lighter
+    color: --first-color-lighter
   }
   
   .footer_social{
     font-size: 1.25rem;
-    margin-right: $mb-1-5;
+    margin-right: var(--mb-1-5);
   }
   
   .footer_social:hover{
-    color: $first-color-lighter;
+    color: var(--first-color-lighter);
   }
   
   .footer_copy{
-    font-size: $small-font-size;
+    font-size: var(--small-font-size);
     text-align: center;
-    color: $text-color-light;
-    margin-top: $mb-3;
+    color: var(--text-color-light);
+    margin-top: var(--mb-3);
   }
   
   .footer_title,
@@ -66,12 +66,12 @@
     opacity: .8;
     padding: 0 .3rem;
     border-radius: .4rem;
-    z-index: $z-tooltip;
+    z-index: var(--z-tooltip);
     transition: .4s;
   }
   
   .scrollup:hover{
-    background-color: $first-color-alt;
+    background-color: var(--first-color-alt);
   }
   
   .scrollup_icon{
@@ -85,22 +85,22 @@
     opacity: 0;
   }
   
-  /* Show scroll */
+  // Show scroll
   .show_scroll{
     bottom: 5rem;
   }
   // SCROLL BAR
   ::-webkit-scrollbar{
     width: .60rem;
-    background-color: $scroll-bar-color;
+    background-color: var(--scroll-bar-color);
     border-radius: .5rem;
   }
   
   ::-webkit-scrollbar-thumb{
-    background-color: $scroll-thumb-color;
+    background-color: var(--scroll-thumb-color);
     border-radius: .5rem;
   }
   
   ::-webkit-scrollbar-thumb:hover{
-    background-color: $text-color-light;
+    background-color: var(--text-color-light);
   }
