--- a/resources/js/assets/css/main/_home.scss
+++ b/resources/js/assets/css/main/_home.scss
@@ -11,38 +11,38 @@
   
   .home_img{
     justify-self: center;
-    background-color: $first-color;
+    background-color: var(--first-color);
     width: 200px;
     height: 200px;
     border-radius: 50%;
     /* padding-left: 40px; */
     overflow: hidden;
-    margin-bottom: $mb-1;
+    margin-bottom: var(--mb-1);
   }
   
   .home_title{
-    font-size: $big-font-size;
+    font-size: var(--big-font-size);
     line-height: 104%;
-    margin-bottom: $mb-0-75;
+    margin-bottom: var(--mb-0-75);
   }
   
   .home_subtitle{
-    font-size: $h3-font-size;
-    color: $text-color;
-    font-weight: $font-medium;
-    margin-bottom: $mb-0-75;
+    font-size: var(--h3-font-size);
+    color: var(--text-color);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-0-75);
   }
   
   .home_description{
-    margin-bottom: $mb-2;
+    margin-bottom: var(--mb-2);
   }
   
   .home_scroll{
-    padding-top: $mb-0-75;
+    padding-top: var(--mb-0-75);
   }
   
   .home_scroll-button{
-    color: $first-color;
+    color: var(--first-color);
     transition: .3s;
   }
   
@@ -55,10 +55,10 @@
   }
   
   .home_scroll-name{
-    font-size: $small-font-size;
-    color: $title-color;
-    font-weight: $font-medium;
-    margin-right: $mb-0-25;
+    font-size: var(--small-font-size);
+    color: var(--title-color);
+    font-weight: var(--font-medium);
+    margin-right: var(--mb-0-25);
     cursor: pointer;
   }
   
@@ -76,9 +76,9 @@
   }
   
   .home_social-follow{
-    font-weight: $font-medium;
-    font-size: $smaller-font-size;
-    color: $first-color;
+    font-weight: var(--font-medium);
+    font-size: var(--smaller-font-size);
+    color: var(--first-color);
     position: relative;
     transform: rotate(90deg);
   }
@@ -88,7 +88,7 @@
     position: absolute;
     width: 1rem;
     height: 2px;
-    background-color: $first-color;
+    background-color: var(--first-color);
     right: -45%;
     top: 50%;
   }
@@ -101,11 +101,11 @@
   
   .home_social-icon{
     font-size: 1.25rem;
-    color: $first-color;
+    color: var(--first-color);
   }
   
   .home_social-icon:hover{
-    color: $first-color;
+    color: var(--first-color);
   }
   .buttons-about {
     display: flex;
