--- a/resources/js/assets/css/main/_services.scss
+++ b/resources/js/assets/css/main/_services.scss
@@ -5,7 +5,7 @@
   
   .services_content{
     position: relative;
-    background-color: $container-color;
+    background-color: var(--container-color);
     padding: 3.5rem .5rem 1.25rem 1.5rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rbba(0,0,0,.15);
@@ -19,14 +19,14 @@
   .services_icon{
     display: block;
     font-size: 1.5rem;
-    color: $first-color;
-    margin-bottom: $mb-1;
+    color: var(--first-color);
+    margin-bottom: var(--mb-1);
   }
   
   .services_title{
-    font-size: $h3-font-size;
-    margin-bottom: $mb-1;
-    font-weight: $font-medium;
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-1);
+    font-weight: var(--font-medium);
   }
   
   .services_button:hover .button_icon{
@@ -44,7 +44,7 @@
     align-items: center;
     justify-content: center;
     padding: 0 1rem;
-    z-index: $z-modal;
+    z-index: var(--z-modal);
     opacity: 0;
     visibility: hidden;
     transition: .3s;
@@ -54,7 +54,7 @@
   
   .services_modal-content{
     position:relative;
-    background-color: $container-color;
+    background-color: var(--container-color);
     padding: 1.5rem;
     border-radius: .5rem;
   }
@@ -68,9 +68,9 @@
   }
   
   .services_modal-title{
-    font-size: $h3-font-size;
-    font-weight: $font-medium;
-    margin-bottom: $mb-1-5;
+    font-size: var(--h3-font-size);
+    font-weight: var(--font-medium);
+    margin-bottom: var(--mb-1-5);
   }
   
   .services_modal-close{
@@ -78,12 +78,12 @@
     top: 1rem;
     right: 1rem;
     font-size: 1.5rem;
-    color: $first-color;
+    color: var(--first-color);
     cursor: pointer;
   }
   
   .services_modal-icon{
-    color: $first-color;
-    margin-right: $mb-0-25;
+    color: var(--first-color);
+    margin-right: var(--mb-0-25);
   }
   
