--- a/resources/js/assets/css/main/_style.scss
+++ b/resources/js/assets/css/main/_style.scss
@@ -1,81 +1,122 @@
-//variables
-$header-height: 3rem;
-//Purple 250 - Green 142 - Blue 230 - Pink 340
-$hue-color: 250;
-$first-color: hsl($hue-color, 69%, 61%);
-$first-color-second: hsl($hue-color, 69%, 61%);
-$first-color-alt: hsl($hue-color, 57%, 53%);
-$title-color: hsl($hue-color, 8%, 15%);
-$text-color: hsl($hue-color, 8%, 45%);
-$text-color-light: hsl($hue-color, 8%, 65%);
-$input-color: hsl($hue-color, 70%, 96%);
-$first-color-lighter: hsl($hue-color, 92%, 85%);
-$body-color: hsl($hue-color, 60%, 99%);
-$container-color: #fff;
-$scroll-bar-color: hsl($hue-color, 12%, 90%);
-$scroll-thumb-color: hsl($hue-color, 12%, 80%);
-$body-font: 'Poppins', sans-serif;
-//Font and typography
-$big-font-size: 3rem;
-$h1-font-size: 2.25rem;
-$h2-font-size: 1.5rem;
-$h3-font-size: 1.25rem;
-$normal-font-size: 1rem;
-$small-font-size: .875rem;
-$smaller-font-size: .813rem;
-//Font weight
-$font-medium: 500;
-$font-semi-bold: 600;
-//Margin Bottom
-$mb-0-25: .25rem;
-$mb-0-5: .5rem;
-$mb-0-75: .75rem;
-$mb-1: 1rem;
-$mb-1-5: 1.5rem;
-$mb-2: 2rem;
-$mb-2-5: 2.5rem;
-$mb-3: 3rem;
-//z-index
-$z-tooltip: 10;
-$z-fixed: 100;
-$z-modal: 1000;
-//Font size for large devices
-@media screen and (min-width: 968px) {
-        $big-font-size: 3rem;
-        $h1-font-size: 2.25rem;
-        $h2-font-size: 1.5rem;
-        $h3-font-size: 1.25rem;
-        $normal-font-size: 1rem;
-        $small-font-size: .875rem;
-        $smaller-font-size: .813rem;
-   
+/*==================== VARIABLES CSS ====================*/
+:root {
+    
+  --header-height: 3rem;
+ /*========== Colors ==========*/
+ /* Change favorite color */
+ --hue-color: 250; /*Purple 250 - Green 142 - Blue 230 - Pink 340*/
+
+ /* HSL color mode */
+ --first-color: hsl(var(--hue-color), 69%, 61%);
+ --first-color-second: hsl(var(--hue-color), 69%, 61%);
+ --first-color-alt: hsl(var(--hue-color), 57%, 53%);
+ --first-color-lighter: hsl(var(--hue-color), 92%, 85%);
+ --title-color: hsl(var(--hue-color), 8%, 15%);
+ --text-color: hsl(var(--hue-color), 8%, 45%);
+ --text-color-light: hsl(var(--hue-color), 8%, 65%);
+ --input-color: hsl(var(--hue-color), 70%, 96%);
+ --body-color: hsl(var(--hue-color), 60%, 99%);
+ --container-color: #fff;
+ --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
+ --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
+
+ /*========== Font and typography ==========*/
+ --body-font: 'Poppins', sans-serif;
+
+ /* .5rem = 8px, 1rem = 16px, 1.5rem = 24px ... */
+ --big-font-size: 2rem;
+ --h1-font-size: 1.5rem;
+ --h2-font-size: 1.25rem;
+ --h3-font-size: 1.125rem;
+ --normal-font-size: .938rem;
+ --small-font-size: .813rem;
+ --smaller-font-size: .75rem;
+
+ /*========== Font weight ==========*/
+ --font-medium: 500;
+ --font-semi-bold: 600;
+
+ /*========== Margenes Bottom ==========*/
+ /* .25rem = 4px, .5rem = 8px, .75rem = 12px ... */
+ --mb-0-25: .25rem;
+ --mb-0-5: .5rem;
+ --mb-0-75: .75rem;
+ --mb-1: 1rem;
+ --mb-1-5: 1.5rem;
+ --mb-2: 2rem;
+ --mb-2-5: 2.5rem;
+ --mb-3: 3rem;
+
+ /*========== z index ==========*/
+ --z-tooltip: 10;
+ --z-fixed: 100;
+ --z-modal: 1000;
 }
 
-body.dark-theme{
-    $first-color-dark: hsl($hue-color, 8%, 20%);
-    $first-color-second: hsl($hue-color, 30%, 8%);
-    $title-color: hsl($hue-color, 4%, 95%);
-    $text-color: hsl($hue-color, 4%, 75%);
-    $body-color: hsl($hue-color, 28%, 12%);
-    $container-color: hsl($hue-color, 8%, 6%);
-    $scroll-bar-color: hsl($hue-color, 12%, 48%);
-    $scroll-thumb-color: hsl($hue-color, 12%, 36%);
-    //$box-shadow: 2px 2px 18px rgb(hsl($input-color));
-    $input-color: hsl($hue-color, 29%, 16%);
-  }
-  * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-  }
+/* Font size for large devices */
+@media screen and (min-width: 968px) {
+ :root {
+     --big-font-size: 3rem;
+     --h1-font-size: 2.25rem;
+     --h2-font-size: 1.5rem;
+     --h3-font-size: 1.25rem;
+     --normal-font-size: 1rem;
+     --small-font-size: .875rem;
+     --smaller-font-size: .813rem;
+ }
+}
 
-  html {
-    scroll-behavior: smooth;
-    font-size: 1.1rem;
-   
-  }
-  
-  
+/*========== Variables Dark theme ==========*/
+body.dark-theme{
+--first-color-dark: hsl(var(--hue-color), 8%, 20%);
+--first-color-second: hsl(var(--hue-color), 30%, 8%);
+--title-color: hsl(var(--hue-color), 4%, 95%);
+--text-color: hsl(var(--hue-color), 4%, 75%);
+--body-color: hsl(var(--hue-color), 28%, 12%);
+--container-color: hsl(var(--hue-color), 8%, 6%);
+--scroll-bar-color: hsl(var(--hue-color), 12%, 48%);
+--scroll-thumb-color: hsl(var(--hue-color), 12%, 36%);
+--box-shadow: 2px 2px 18px rgb(hsl(var(--input-color)));
+--input-color: hsl(var(--hue-color), 29%, 16%);
+}
+
+/*========== Button Dark/Light ==========*/
+.change_theme{
+color: var(--title-color);
+font-size: 1.15rem;
+cursor: pointer;
+}
+
+.nav_btns{
+display: inline-flex;
+align-items: center;
+column-gap: 1rem;
+}
+ 
+/*base*/
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  font-family: var(--body-font);
+  font-size: var(--normal-font-size);
+  background-color: var(--body-color);
+  color: var(--text-color);
+}
+
+h1, h2, h3, h4 {
+  color: var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
 ul {
   list-style: none;
 }
@@ -91,66 +132,53 @@ img {
 
   //buttons
   .client {
-    font-family: $body-font;
-    font-size: $normal-font-size;
-    background-color: $body-color;
-    color: $text-color;
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
+    background-color: var(--body-color);
+    color: var(--text-color);
 
-    .change_theme{
-        color: $title-color;
-        font-size: 1.15rem;
-        cursor: pointer;
-      }
-      
-      .nav_btns{
-        display: inline-flex;
-        align-items: center;
-        column-gap: 1rem;
-      }
-      h1, h2, h3, h4 {
-        color: $title-color;
-        font-weight: $font-semi-bold;
-    }
     .section {
-        padding: 2rem 0 4rem;
-      }
-      
-      .section__title {
-        font-size: $h1-font-size;
-        color: $title-color;
-      }
-      
-      .section__subtitle {
-        display: block;
-        font-size: $small-font-size;
-        margin-bottom: $mb-3;
-      }
-      
-      .section__title, 
-      .section__subtitle {
-        text-align: center;
-      }
-      .container {
-        max-width: 968px;
-        margin-left: $mb-1-5;
-        margin-right: $mb-1-5;
-        width: unset;
-      }
-      
-      .grid {
-        display: grid;
-        gap: 1.5rem;
-      }
-      
-      .header{
-        width: 100%;
-        background-color: $body-color;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: $z-fixed;
-        transition: .4s; /*For animation dark mode*/
-      }
+      padding: 2rem 0 4rem;
+    }
+    
+    .section__title {
+      font-size: var(--h1-font-size);
+      color: var(--title-color);
+    }
+    
+    .section__subtitle {
+      display: block;
+      font-size: var(--small-font-size);
+      margin-bottom: var(--mb-3);
+    }
+    
+    .section__title, 
+    .section__subtitle {
+      text-align: center;
+    }
+    
+    /*==================== LAYOUT ====================*/
+    .container {
+      max-width: 968px;
+      margin-left: var(--mb-1-5);
+      margin-right: var(--mb-1-5);
+    }
+    
+    .grid {
+      display: grid;
+      gap: 1.5rem;
+    }
+    
+    .header{
+      width: 100%;
+      background-color: var(--body-color);
+      position: fixed;
+      top: 0;
+      left: 0;
+      z-index: var(--z-fixed);
+      transition: .4s; /*For animation dark mode*/
+    }
+    
       //navigation
       .nav{
         height: 3rem;
@@ -162,7 +190,7 @@ img {
       .nav_logo,
       .nav_toggle,
       .nav_close{
-        color: $title-color;
+        color: var(--title-color);
       }
       
       .nav_logo{
@@ -176,7 +204,7 @@ img {
       }
       
       .nav_logo:hover{
-        color: $first-color;
+        color: var(--first-color);
       }
       
       .nav_toggle{
@@ -200,21 +228,21 @@ img {
       }
       
       .nav_link{
-        color: $title-color;
-        font-weight: $font-medium;
+        color: var(--title-color);
+      font-weight: var(--font-medium);
         transition: .3s;
         text-transform: capitalize;
       }
       
       .nav_link:hover{
-        color: $first-color;
+        color: var(--first-color);
       }
       .show_menu{
         right: 0;
       }
       .active_link{
         position: relative;
-        color: $first-color;
+        color: var(--first-color);
       }
       
       .active_link::after{
@@ -224,10 +252,10 @@ img {
         left: 0;
         width: 50%;
         height: 2px;
-        background-color: $first-color;
+        background-color: var(--first-color);
       }
       .scroll_header{
-        box-shadow: 0 1px 4px hsla($hue-color, 4%, 15%, .1);
+        box-shadow: 0 1px 4px hsla(var(--hue-color), 4%, 15%, .1);
       }
       @import '_home';
       @import '_buttons';
