--- a/resources/js/assets/css/main/_testimonial.scss
+++ b/resources/js/assets/css/main/_testimonial.scss
@@ -5,32 +5,32 @@
 
 .testimonial_data{
   justify-content: space-between;
-  margin-bottom: $mb-1;
+  margin-bottom: var(--mb-1);
 }
 
 .testimonial_img{
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  margin-right: $mb-0-75;
+  margin-right: var(--mb-0-75);
 }
 
 .testimonial_name{
-  font-size: $h3-font-size;
-  font-weight: $font-medium;
+  font-size: var(--h3-font-size);
+  font-weight: var(--font-medium);
 }
 
 .testimonial_client{
-  font-size: $small-font-size;
-  color: $text-color-light;
+  font-size: var(--small-font-size);
+  color: var(--text-color-light);
 }
 
 .testimonial_description{
-  margin-bottom: $mb-2-5;
+  margin-bottom: var(--mb-2-5);
 }
 
 .testimonial_icon-star{
-  color: $first-color;
+  color: var(--first-color);
 }
 
 .swiper-container .swiper-pagination-testimonial{
